--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@flashbots/matchmaker-ts": "^0.7.5",
+    "@flashbots/matchmaker-ts": "../matchmaker-ts/",
+    "dotenv": "^16.3.1",
     "ethers": "^6.6.2"
+  },
+  "scripts": {
+    "dev": "ts-node src/index.ts",
+    "build": "tsc",
+    "start": "yarn build && node build/index.js"
   }
 }
