--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "author": "zeroXbrock",
   "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^4.3.5",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^20.3.3",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
@@ -18,6 +22,7 @@
   "scripts": {
     "dev": "ts-node src/index.ts",
     "build": "tsc",
-    "start": "yarn build && node build/index.js"
+    "start": "yarn build && node build/index.js",
+    "test": "mocha --require ts-node/register src/test/*.spec.ts"
   }
 }
