add revm, fix client arg

--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.71"
 dotenvy = "0.15.7"
 ethers = "2.0.7"
 futures = "0.3.28"
+revm = {version = "3.0.0", features = ["ethersdb", "serde", "std"]}
 rusty-sando = {path = "./rusty-sando/bot"}
 serde = "1.0.164"
 serde_json = {version = "1.0.99", features = ["arbitrary_precision", "std", "preserve_order"]}
