test multiple swaps, ready for backrun optimization

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "simulator/mev-share-rs"]
 	path = simulator/mev-share-rs
 	url = https://github.com/mattsse/mev-share-rs.git
+[submodule "simulator/uniswap-v3-math"]
+	path = simulator/uniswap-v3-math
+	url = https://github.com/0xKitsune/uniswap-v3-math.git
