--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 
 [dependencies]
 anyhow = "1.0.71"
+async-recursion = "1.0.4"
 colored = "2.0.4"
 dotenvy = "0.15.7"
 ethers = "2.0.7"
