--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -8,6 +8,7 @@ version = "0.1.0"
 [dependencies]
 anyhow = "1.0.71"
 async-recursion = "1.0.4"
+clap = { version = "4.3.11", features = ["derive"] }
 colored = "2.0.4"
 dotenvy = "0.15.7"
 ethers = "2.0.7"
