--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -8,11 +8,12 @@ version = "0.1.0"
 [dependencies]
 anyhow = "1.0.71"
 async-recursion = "1.0.4"
-clap = { version = "4.3.11", features = ["derive"] }
+clap = {version = "4.3.11", features = ["derive"]}
 colored = "2.0.4"
 dotenvy = "0.15.7"
 ethers = "2.0.7"
 futures = "0.3.28"
+mev-share-sse = {git = "https://github.com/zeroXbrock/mev-share-rs.git", branch = "optional-log-tx-fields"}
 revm = {version = "3.0.0", features = ["ethersdb", "serde", "std"]}
 rusty-sando = {path = "./rusty-sando/bot"}
 serde = "1.0.164"
