--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -19,4 +19,6 @@ rusty-sando = {path = "./rusty-sando/bot"}
 serde = "1.0.164"
 serde_json = {version = "1.0.99", features = ["arbitrary_precision", "std", "preserve_order"]}
 tokio = {version = "1.29.1", features = ["macros", "net", "process", "rt", "rt-multi-thread", "sync", "time"]}
+tracing = "0.1.37"
+tracing-subscriber = "0.3.17"
 uniswap_v3_math = {path = "./uniswap-v3-math"}
