add mongoDB integration for arb results

--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -14,6 +14,7 @@ dotenvy = "0.15.7"
 ethers = "2.0.7"
 futures = "0.3.28"
 mev-share-sse = {git = "https://github.com/zeroXbrock/mev-share-rs.git", branch = "optional-log-tx-fields"}
+mongodb = { version = "2.6.0", features = ["tracing"] }
 revm = {version = "3.0.0", features = ["ethersdb", "serde", "std"]}
 rusty-sando = {path = "./rusty-sando/bot"}
 serde = "1.0.164"
