--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 edition = "2021"
-name = "simulator"
+name = "hindsight"
 version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -14,7 +14,7 @@ dotenvy = "0.15.7"
 ethers = "2.0.7"
 futures = "0.3.28"
 mev-share-sse = {git = "https://github.com/zeroXbrock/mev-share-rs.git", branch = "optional-log-tx-fields"}
-mongodb = { version = "2.6.0", features = ["tracing"] }
+mongodb = {version = "2.6.0", features = ["tracing"]}
 revm = {version = "3.0.0", features = ["ethersdb", "serde", "std"]}
 rusty-sando = {path = "./rusty-sando/bot"}
 serde = "1.0.164"
