--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -22,4 +22,4 @@ serde_json = {version = "1.0.99", features = ["arbitrary_precision", "std", "pre
 tokio = {version = "1.29.1", features = ["macros", "net", "process", "rt", "rt-multi-thread", "sync", "time"]}
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
-uniswap_v3_math = {path = "./uniswap-v3-math"}
+uniswap_v3_math = {git = "https://github.com/0xKitsune/uniswap_v3_math"}
