remove mev-share-rs submodule

--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -13,7 +13,7 @@ colored = "2.0.4"
 dotenvy = "0.15.7"
 ethers = "2.0.7"
 futures = "0.3.28"
-mev-share-sse = {git = "https://github.com/zeroXbrock/mev-share-rs.git", branch = "optional-log-tx-fields"}
+mev-share-sse = {git = "https://github.com/paradigmxyz/mev-share-rs.git"}
 mongodb = {version = "2.6.0", features = ["tracing"]}
 revm = {version = "3.0.0", features = ["ethersdb", "serde", "std"]}
 rusty-sando = {path = "./rusty-sando/bot"}
@@ -22,4 +22,4 @@ serde_json = {version = "1.0.99", features = ["arbitrary_precision", "std", "pre
 tokio = {version = "1.29.1", features = ["macros", "net", "process", "rt", "rt-multi-thread", "sync", "time"]}
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
-uniswap_v3_math = {git = "https://github.com/0xKitsune/uniswap_v3_math"}
+uniswap_v3_math = {git = "https://github.com/0xKitsune/uniswap_v3_math.git"}
