--- a/simulator/docker-compose.yaml
+++ b/simulator/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: example
     ports:
       - 27017:27017
+    volumes:
+      - data:/data/db:rw
   mongo-express:
     image: mongo-express
     restart: always
@@ -17,3 +19,5 @@ services:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
       ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+volumes:
+  data:
