--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,5 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - name: Checkout submodules
+      run: git submodule update --init --recursive
     - name: Build
       run: cargo build --verbose
