(unfinished) abstract db engines

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,5 +19,18 @@ services:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
       ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+  postgres:
+    image: postgres:15.4
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: adminPassword
+      POSTGRES_DB: hindsight
+    ports:
+      - 5432:5432
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
 volumes:
   data:
+  pgdata:
