--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ version = "0.1.0"
 [dependencies]
 anyhow = "1.0.71"
 async-recursion = "1.0.4"
+async-trait = "0.1.73"
 clap = {version = "4.3.11", features = ["derive"]}
 colored = "2.0.4"
 dotenvy = "0.15.7"
@@ -15,6 +16,7 @@ ethers = "2.0.7"
 futures = "0.3.28"
 mev-share-sse = {git = "https://github.com/paradigmxyz/mev-share-rs.git"}
 mongodb = {version = "2.6.0", features = ["tracing"]}
+postgres = "0.19.5"
 revm = {version = "3.0.0", features = ["ethersdb", "serde", "std"]}
 rusty-sando = {path = "./rusty-sando/bot"}
 serde = "1.0.164"
