--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 RPC_URL_WS=ws://127.0.0.1:8545
-DB_URL=mongodb://localhost:27017
+MONGO_URL=mongodb://localhost:27017
+POSTGRES_URL=postgres://postgres:adminPassword@localhost:5432
