--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 RPC_URL_WS=ws://127.0.0.1:8545
-MONGO_URL=mongodb://localhost:27017
+MONGO_URL=mongodb://root:example@localhost:27017
 POSTGRES_URL=postgres://postgres:adminPassword@localhost:5432/hindsight
