update postgres schema

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 RPC_URL_WS=ws://127.0.0.1:8545
 MONGO_URL=mongodb://root:example@localhost:27017
-POSTGRES_URL=postgres://postgres:adminPassword@localhost:5432/hindsight
+POSTGRES_URL=postgres://postgres:adminPassword@localhost:5432
 
 # uncomment next line to enable TLS; requires pem file path (relative to binary, or absolute)
 #TLS_CA_FILE_MONGO=
