add core logic to analyze arb data stats, skeleton for new analyze command

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ rust_decimal = { version = "1.32.0", features = ["tokio-pg"] }
 rusty-sando = {path = "./rusty-sando/bot"}
 serde = "1.0.164"
 serde_json = {version = "1.0.99", features = ["arbitrary_precision", "std", "preserve_order"]}
+statistical = "1.0.0"
 strum = { version = "0.25.0", features = ["std", "derive", "strum_macros"] }
 tokio = {version = "1.29.1", features = ["macros", "net", "process", "rt", "rt-multi-thread", "sync", "time"]}
 tokio-postgres = { version = "0.7.9", features = ["with-serde_json-1", "with-chrono-0_4"] }
