--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "sim/foundry"]
 	path = sim/foundry
 	url = https://github.com/foundry-rs/foundry
+[submodule "sim/contracts/lib/forge-std"]
+	path = sim/contracts/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
