--- a/sim/Cargo.toml
+++ b/sim/Cargo.toml
@@ -18,5 +18,6 @@ tokio = {version = "1.29.1", features = ["macros", "net", "process", "rt", "rt-m
 uniswap_v3_math = {git = "https://github.com/0xKitsune/uniswap_v3_math.git"}
 hashbrown = "0.14.2"
 eyre = "0.6.9"
+foundry-contracts.workspace = true
 # foundry-evm = { git = "https://github.com/foundry-rs/foundry", version = "0.2.0" }
 # foundry-evm = { path = "../../foundry/crates/evm/evm" }
