forge install: v3-core
v1.0.0

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "sim/contracts/lib/forge-std"]
 	path = sim/contracts/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "sim/contracts/lib/v3-core"]
+	path = sim/contracts/lib/v3-core
+	url = https://github.com/Uniswap/v3-core
