--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["data", "foresight", "hindsight", "sim", "hindsight_core"]
+members = ["data", "foresight", "scanner", "sim", "hindsight-core", "cli"]
 resolver = "2"
 
 [workspace.package]
