--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hindsight_core = { path = "../hindsight_core" }
+hindsight-core = { path = "../hindsight-core" }
 anyhow = "1.0.71"
 async-trait = "0.1.73"
 chrono = { version = "0.4.30", features = ["serde"] }
