--- a/foresight/Cargo.toml
+++ b/foresight/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hindsight-core = { path = "../hindsight-core" }
+
 ethers = "2.0.7"
-hindsight = { path = "../hindsight" }
 statistical = "1.0.0"
