--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -24,3 +24,4 @@ clap = {version = "4.3.11", features = ["derive"]}
 ethers = {version = "2.0.7", features = ["ws"]}
 tracing-subscriber = "0.3.17"
 tokio = {version = "1.29.1", features = ["macros", "net", "process", "rt", "rt-multi-thread", "sync", "time"]}
+lazy_static = "1.4.0"
