--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -23,3 +23,4 @@ strum = { version = "0.25.0", features = ["std", "derive", "strum_macros"] }
 tokio = {version = "1.29.1", features = ["macros", "net", "process", "rt", "rt-multi-thread", "sync", "time"]}
 tokio-postgres = { version = "0.7.9", features = ["with-serde_json-1", "with-chrono-0_4"] }
 tracing = "0.1.37"
+tracing-subscriber = "0.3.17"
