--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -25,3 +25,4 @@ ethers = {version = "2.0.7", features = ["ws"]}
 tracing-subscriber = "0.3.17"
 tokio = {version = "1.29.1", features = ["macros", "net", "process", "rt", "rt-multi-thread", "sync", "time"]}
 lazy_static = "1.4.0"
+serde_json = "1.0.108"
