--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -26,3 +26,6 @@ tracing-subscriber = "0.3.17"
 tokio = {version = "1.29.1", features = ["macros", "net", "process", "rt", "rt-multi-thread", "sync", "time"]}
 lazy_static = "1.4.0"
 serde_json = "1.0.108"
+serde = "1.0.196"
+csv = "1.3.0"
+chrono = { version = "0.4.33", features = ["serde"] }
